--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,8 +1,8 @@
 /* Style the navbar */
 #navbar {
-    /* overflow: hidden; */
     background-color: #333;
 }
+
 #navbar .s_brand {
     border-radius: 80px;
     background: linear-gradient(145deg, #202a8c, #2732a6);
@@ -16,13 +16,13 @@
 }
 
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
-.sticky-nav {
-    /* position: fixed; */
+.sticky_nav {
+    position: fixed;
     top: 0;
     width: 100%;
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky-nav + .content {
+.sticky_nav + .content {
     padding-top: 60px;
 }
